# Trading-AI-SHER

./: .dockerignore  .env  .env.prod.template  .env.production.example  .gitignore  .pre-commit-config.yaml  ANGEL_ONE_SETUP.md  App.tsx  DEMO_DAY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DISASTER_RECOVERY.md  Dockerfile  Dockerfile.prod  GCP_DEPLOYMENT.md  GIT_COMMANDS_TEMPLATE.txt  MONITORING_ALERT_RULES.json  PILOT_ONBOARDING.md  PRODUCTION_READINESS_EXECUTION.md  PRODUCTION_RUNBOOK.md  QUICK_START.md  README.md  REGULATORY_DISCLOSURE.md  RUNBOOK.md  SCALING_PLAN.md  SECURE_GIT_GUIDE.md  SETUP_COMPLETE.md  SLA_SPEC.md  TODO.md  TODO_COMPLETED.md  TODO_PRODUCTION_READINESS.md  TODO_PRODUCTION_READINESS_TASKS.md  TODO_SMC_AGENT.md  UI_AUDIT_CHECKLIST.md  USER_MANUAL.md  VERCEL_DEPLOYMENT.md  cloud-run.prod.yaml  cloud-run.yaml  cloudbuild.prod.yaml  cloudbuild.yaml  deploy.sh  (+16 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  grafana-dashboard.json  load_test.py  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt  run.py  sher.db
backend/.github/workflows/: ci.yml  deploy.yml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  002_add_smc_fields_to_signals.py  (+1 more)
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/docs/: api_documentation.md
backend/tests/: conftest.py  test_api_middleware.py  test_auth.py  test_core_services.py  test_database_services.py  test_integration_smc.py  test_security_services.py  test_signal_service_smc.py  test_signals.py  test_smc_engine.py
(+632 files in other folders)
